<resources>
    <string name="app_name">Qatra Dam</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="title_home">Home</string>
    <string name="title_requests">Requests</string>
    <string name="title_donors">Donors</string>
    <string name="title_contact">Contact</string>

    <string name="update_profile">Update Profile</string>
    <string name="add_request">Add Request</string>
    <string name="add_donor">Add Donor</string>
    <string name="change_password">Change Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_details">Your identity has been verified! \n set your new password</string>
    <string name="change_password_details">Set your new password</string>
    <string name="code_verification">Code \n Verification</string>
    <string name="insert_code_verification">Insert Code Verification</string>
    <string name="otp_description_text">Enter one time password sent on</string>
    <string name="new_password">New Password</string>
    <string name="old_password">Old Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="guidelines">Guidelines</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>
    <string name="about_application">blood donation is an app to help and connect people with the same blood type in the same location. you can request blood donation help or ask some one to help</string>
    <string name="version">Version : 1.0</string>
    <string name="logout">Logout</string>
    <string name="share">Share</string>
    <string name="rate">Rate</string>
    <string name="send">Send</string>
    <string name="communicate">Communicate</string>
    <string name="cancel">Cancel</string>
    <string name="confirmExit">Are you sure you want to Exit ?</string>

    <string name="first_slide_title">Welcome To My App</string>
    <string name="second_slide_title">Search For Donors</string>
    <string name="third_slide_title">Search For Receiver</string>

    <string name="first_slide_desc">blood donation is an app to help and connect people with the same blood type in the same location. you can request blood donation help or ask some one to help</string>
    <string name="second_slide_desc">You can search for donors by entering the application and then entering the donor tab and displaying the donors whose blood types match you and communicating with them</string>
    <string name="third_slide_desc">You can search for people in need of blood by entering the application and then entering the tab of cases and displaying those in need whose blood types match you and communicate with them</string>

    <string name="skip_btn">Skip</string>
    <string name="next_btn">Next</string>
    <string name="let_get_started">Let\'s Get Started</string>

    <string name="group">Group</string>
    <string name="name">Name</string>
    <string name="donor_name">Donor Name</string>
    <string name="phone">Phone</string>
    <string name="hospital">Hospital</string>
    <string name="age">Age</string>
    <string name="description">Description</string>
    <string name="email"> Email </string>
    <string name="date"> Date </string>
    <string name="number"> Number </string>
    <string name="gender"> Gender </string>
    <string name="login">Login</string>
    <string name="password"> Password </string>
    <string name="create_account">Create Account</string>
    <string name="have_account"> Already have Account ? </string>
    <string name="no_account"> No Account yet ? </string>
    <string name="address"> Address </string>
    <string name="male"> Male </string>
    <string name="female"> Female </string>
    <string name="last_donate">" Last Donation"</string>
    <string name="forget_password">Forget Password?</string>
    <string name="recovery_password">Recovery Password</string>
    <string name="recovery_password_via_email_details">Provide your account\'s email for which you want to reset your password</string>
    <string name="recovery_password_via_sms_details">Provide your account\'s phone number for which you want to reset your password</string>
    <string name="msg_sms_confirm">Make sure you have entered the same phone number as you registered in your account</string>
    <string name="msg_email_confirm">Make sure you have entered the same email as you registered in your account</string>
    <string name="make_selection">Make Selection</string>
    <string name="make_selection_details">Select which contact details should we use to reset your password</string>
    <string name="via_sms">via sms</string>
    <string name="via_mail">via email</string>
    <string name="remember_me">Remember Me</string>
    <string name="connection_failed">No internet !</string>
    <string name="connection_failed_msg">Please check your internet connection</string>
    <string name="slogan">A drop of Blood = Human Life</string>
    <string name="developer">Elfadel Isamelden Ali Omer</string>
    <string name="policy">Policy</string>
    <string name="accept_request">Accept Request</string>
    <string name="my_requests">My Requests</string>


    <string name="guide1"> ما هي فصائل الدم؟</string>
    <string name="guide2"> ما هي فوائد التبرع بالدم؟</string>
    <string name="guide3">من المستفيد من الدم المتبرع به؟</string>
    <string name="guide4"> متى يمنع التبرع بالدم؟</string>
    <string name="guide5">هل توجد مضاعفات قد يتعرض لها المتبرع؟</string>
    <string name="guide6"> كيف يتم التبرع بالدم؟</string>
    <string name="guide7">ماذا علي أن أفعل بعد التبرع بالدم؟</string>
    <string name="guide8">متى يمكن معاودة التبرع بالدم؟</string>
    <string name="guide9">كيف يمكن اضافة بياناتي كمتبرع بالدم؟</string>
    <string name="guide10">كيف استطيع البحث عن متبرعين بالدم؟</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
