<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/update_profile"
            android:icon="@drawable/ic_profile_24"
            android:title="@string/update_profile" />
        <item
            android:id="@+id/my_requests"
            android:icon="@drawable/ic_my_requests_24"
            android:title="@string/my_requests" />
        <item
            android:id="@+id/add_case"
            android:icon="@drawable/ic_add_case_24"
            android:title="@string/add_request" />
        <item
            android:id="@+id/add_donor"
            android:icon="@drawable/ic_add_donor"
            android:title="@string/add_donor" />
        <item
            android:id="@+id/change_password"
            android:icon="@drawable/ic_change_password_24"
            android:title="@string/change_password" />
        <item
            android:id="@+id/guidelines"
            android:icon="@drawable/ic_advice_24"
            android:title="@string/guidelines" />
        <item
            android:id="@+id/about"
            android:icon="@drawable/ic_info_24"
            android:title="@string/about" />
        <item
            android:id="@+id/logout"
            android:icon="@drawable/ic_logout_24"
            android:title="@string/logout" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_share_24"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_rate_24"
                android:title="@string/rate" />
            <item
                android:id="@+id/nav_policy"
                android:icon="@drawable/ic_policy_24"
                android:title="@string/policy" />
        </menu>
    </item>
</menu>
