<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="30dp"
            android:contentDescription="@string/slogan"
            android:src="@drawable/logo" />

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/version"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/version"
            android:textColor="@color/dark"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:padding="10dp"
            android:text="@string/about_application"
            android:textAlignment="center"
            android:textColor="#484848"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:contentDescription="@string/phone"
                android:onClick="call"
                android:src="@drawable/ic_phone_24" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:contentDescription="@string/email"
                android:onClick="message"
                android:src="@drawable/ic_email_24" />

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_weight="1"
                android:contentDescription="@string/developer"
                android:onClick="facebook"
                android:src="@drawable/ic_link_24" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>