<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:theme="@style/Theme.MaterialComponents"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordViaEmailActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@drawable/ic_forget_password_24"
            android:tint="@color/black" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovery_password"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textAllCaps="true"
            android:layout_marginTop="20dp"
            android:layout_gravity="center"
            android:textSize="24sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovery_password_via_email_details"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:includeFontPadding="true"
            android:textColor="@color/black"
            android:textSize="14sp"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:hint="@string/email"
            android:textColorHint="@color/gray"
            app:boxStrokeColor="@color/colorPrimary"
            app:boxStrokeWidthFocused="1dp"
            app:endIconMode="clear_text"
            app:endIconTint="@color/gray"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/ic_email_24"
            app:startIconTint="@color/gray">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="14sp"
                android:textColor="@color/black"
                android:gravity="start"
                android:inputType="textEmailAddress"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/msg_email_confirm"
            android:layout_gravity="start"
            android:textColor="@color/red"
            android:textSize="14sp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:onClick="next"
            android:textColor="#fff"
            android:textStyle="bold"
            android:background="@drawable/border"
            android:text="@string/next_btn"/>

    </LinearLayout>

</ScrollView>