<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".LogoutActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:text="@string/logout"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/message"
        android:text="@string/confirmExit"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:textSize="16sp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cancel"
            android:text="@string/cancel"
            android:textColor="@color/lightwhite"
            android:background="@drawable/border"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/exit"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:background="@drawable/border"
            android:textSize="12sp"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>